chore(memory): document architectural decisions and update session log for Phase 7